examples/test/testpolicy9248.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9248
  namespace: namespace389
spec:
  podSelector:
    matchLabels:
      key45: value47
      key38: value37
      key39: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value16
      podSelector:
        matchLabels:
          key37: value0
          key6: value16
          key0: value28
